added the evaluator module

--- a/Notebook/eda.ipynb
+++ b/Notebook/eda.ipynb
@@ -1536,6 +1536,55 @@
     "# Save the DataFrame to a CSV file\n",
     "df.to_csv('Data.csv', index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df=pd.read_csv('C:\\Datascience study\\Projects\\Assignment_ml\\Data\\Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## preparing test data\n",
+    "df_test=df[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv('test.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
